[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[dependencies]
itertools = "0.14.0"
fancy-regex = "0.16.2"
rayon = "1.11.0"
colored = "3.0.0"
